fix: getAccessiblePath()